--- a/index.ipynb
+++ b/index.ipynb
@@ -274,9 +274,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. --- [] --- Checking the Dog class's class variale _all\n",
+      "2. --- [<__main__.Dog object at 0x7f4e54cb85f8>] --- Using the add_dog class method to add a new dog instance to _all\n",
+      "3. --- [<__main__.Dog object at 0x7f4e54cb85f8>] --- Checking the Dog class's class variale _all\n"
+     ]
+    }
+   ],
    "source": [
     "class Dog:\n",
     "    \n",
